antlr/PascalParser.py
# Generated from Pascal.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PascalParser ( Parser ):

    grammarFileName = "Pascal.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'AND'", "'ARRAY'", "'BEGIN'", "'BOOLEAN'", 
                     "'CHAR'", "'CHR'", "'CONST'", "'DIV'", "'DO'", "'DOWNTO'", 
                     "'ELSE'", "'END'", "'FILE'", "'FOR'", "'FUNCTION'", 
                     "'IF'", "'IN'", "'INTEGER'", "'LABEL'", "'MOD'", "'NIL'", 
                     "'NOT'", "'OF'", "'OR'", "'PROCEDURE'", "'PROGRAM'", 
                     "'REAL'", "'RECORD'", "'SET'", "'THEN'", "'TO'", "'TYPE'", 
                     "'UNTIL'", "'VAR'", "'WHILE'", "'+'", "'-'", "'*'", 
                     "'/'", "':='", "','", "';'", "':'", "'='", "'<>'", 
                     "'<'", "'<='", "'>='", "'>'", "'('", "')'", "'['", 
                     "'(.'", "']'", "'.)'", "'^'", "'@'", "'.'", "'..'", 
                     "'{'", "'}'", "'UNIT'", "'INTERFACE'", "'USES'", "'STRING'", 
                     "'IMPLEMENTATION'", "'TRUE'", "'FALSE'" ]

    symbolicNames = [ "<INVALID>", "AND", "ARRAY", "BEGIN", "BOOLEAN", "CHAR", 
                      "CHR", "CONST", "DIV", "DO", "DOWNTO", "ELSE", "END", 
                      "FILE", "FOR", "FUNCTION", "IF", "IN", "INTEGER", 
                      "LABEL", "MOD", "NIL", "NOT", "OF", "OR", "PROCEDURE", 
                      "PROGRAM", "REAL", "RECORD", "SET", "THEN", "TO", 
                      "TYPE", "UNTIL", "VAR", "WHILE", "PLUS", "MINUS", 
                      "STAR", "SLASH", "ASSIGN", "COMMA", "SEMI", "COLON", 
                      "EQUAL", "NOT_EQUAL", "LT", "LE", "GE", "GT", "LPAREN", 
                      "RPAREN", "LBRACK", "LBRACK2", "RBRACK", "RBRACK2", 
                      "POINTER", "AT", "DOT", "DOTDOT", "LCURLY", "RCURLY", 
                      "UNIT", "INTERFACE", "USES", "STRING", "IMPLEMENTATION", 
                      "TRUE", "FALSE", "WS", "COMMENT_1", "COMMENT_2", "IDENT", 
                      "STRING_LITERAL", "NUM_INT", "NUM_REAL" ]

    RULE_program = 0
    RULE_programHeading = 1
    RULE_identifier = 2
    RULE_block = 3
    RULE_usesUnitsPart = 4
    RULE_labelDeclarationPart = 5
    RULE_label = 6
    RULE_constantDefinitionPart = 7
    RULE_constantDefinition = 8
    RULE_constantChr = 9
    RULE_constant = 10
    RULE_unsignedNumber = 11
    RULE_unsignedInteger = 12
    RULE_unsignedReal = 13
    RULE_sign = 14
    RULE_bool_ = 15
    RULE_string = 16
    RULE_typeDefinitionPart = 17
    RULE_typeDefinition = 18
    RULE_functionType = 19
    RULE_procedureType = 20
    RULE_type_ = 21
    RULE_simpleType = 22
    RULE_scalarType = 23
    RULE_subrangeType = 24
    RULE_typeIdentifier = 25
    RULE_structuredType = 26
    RULE_unpackedStructuredType = 27
    RULE_stringtype = 28
    RULE_arrayType = 29
    RULE_typeList = 30
    RULE_indexType = 31
    RULE_componentType = 32
    RULE_recordType = 33
    RULE_fieldList = 34
    RULE_fixedPart = 35
    RULE_recordSection = 36
    RULE_setType = 37
    RULE_baseType = 38
    RULE_fileType = 39
    RULE_pointerType = 40
    RULE_variableDeclarationPart = 41
    RULE_variableDeclaration = 42
    RULE_procedureAndFunctionDeclarationPart = 43
    RULE_procedureOrFunctionDeclaration = 44
    RULE_procedureDeclaration = 45
    RULE_formalParameterList = 46
    RULE_formalParameterSection = 47
    RULE_parameterGroup = 48
    RULE_identifierList = 49
    RULE_constList = 50
    RULE_functionDeclaration = 51
    RULE_resultType = 52
    RULE_statement = 53
    RULE_unlabelledStatement = 54
    RULE_simpleStatement = 55
    RULE_assignmentStatement = 56
    RULE_variable = 57
    RULE_expression = 58
    RULE_relationaloperator = 59
    RULE_simpleExpression = 60
    RULE_additiveoperator = 61
    RULE_term = 62
    RULE_multiplicativeoperator = 63
    RULE_signedFactor = 64
    RULE_factor = 65
    RULE_unsignedConstant = 66
    RULE_functionDesignator = 67
    RULE_parameterList = 68
    RULE_set_ = 69
    RULE_elementList = 70
    RULE_element = 71
    RULE_procedureStatement = 72
    RULE_actualParameter = 73
    RULE_parameterwidth = 74
    RULE_emptyStatement_ = 75
    RULE_empty_ = 76
    RULE_structuredStatement = 77
    RULE_compoundStatement = 78
    RULE_statements = 79
    RULE_conditionalStatement = 80
    RULE_ifStatement = 81
    RULE_repetetiveStatement = 82
    RULE_whileStatement = 83
    RULE_forStatement = 84
    RULE_forList = 85
    RULE_initialValue = 86
    RULE_finalValue = 87

    ruleNames =  [ "program", "programHeading", "identifier", "block", "usesUnitsPart", 
                   "labelDeclarationPart", "label", "constantDefinitionPart", 
                   "constantDefinition", "constantChr", "constant", "unsignedNumber", 
                   "unsignedInteger", "unsignedReal", "sign", "bool_", "string", 
                   "typeDefinitionPart", "typeDefinition", "functionType", 
                   "procedureType", "type_", "simpleType", "scalarType", 
                   "subrangeType", "typeIdentifier", "structuredType", "unpackedStructuredType", 
                   "stringtype", "arrayType", "typeList", "indexType", "componentType", 
                   "recordType", "fieldList", "fixedPart", "recordSection", 
                   "setType", "baseType", "fileType", "pointerType", "variableDeclarationPart", 
                   "variableDeclaration", "procedureAndFunctionDeclarationPart", 
                   "procedureOrFunctionDeclaration", "procedureDeclaration", 
                   "formalParameterList", "formalParameterSection", "parameterGroup", 
                   "identifierList", "constList", "functionDeclaration", 
                   "resultType", "statement", "unlabelledStatement", "simpleStatement", 
                   "assignmentStatement", "variable", "expression", "relationaloperator", 
                   "simpleExpression", "additiveoperator", "term", "multiplicativeoperator", 
                   "signedFactor", "factor", "unsignedConstant", "functionDesignator", 
                   "parameterList", "set_", "elementList", "element", "procedureStatement", 
                   "actualParameter", "parameterwidth", "emptyStatement_", 
                   "empty_", "structuredStatement", "compoundStatement", 
                   "statements", "conditionalStatement", "ifStatement", 
                   "repetetiveStatement", "whileStatement", "forStatement", 
                   "forList", "initialValue", "finalValue" ]

    EOF = Token.EOF
    AND=1
    ARRAY=2
    BEGIN=3
    BOOLEAN=4
    CHAR=5
    CHR=6
    CONST=7
    DIV=8
    DO=9
    DOWNTO=10
    ELSE=11
    END=12
    FILE=13
    FOR=14
    FUNCTION=15
    IF=16
    IN=17
    INTEGER=18
    LABEL=19
    MOD=20
    NIL=21
    NOT=22
    OF=23
    OR=24
    PROCEDURE=25
    PROGRAM=26
    REAL=27
    RECORD=28
    SET=29
    THEN=30
    TO=31
    TYPE=32
    UNTIL=33
    VAR=34
    WHILE=35
    PLUS=36
    MINUS=37
    STAR=38
    SLASH=39
    ASSIGN=40
    COMMA=41
    SEMI=42
    COLON=43
    EQUAL=44
    NOT_EQUAL=45
    LT=46
    LE=47
    GE=48
    GT=49
    LPAREN=50
    RPAREN=51
    LBRACK=52
    LBRACK2=53
    RBRACK=54
    RBRACK2=55
    POINTER=56
    AT=57
    DOT=58
    DOTDOT=59
    LCURLY=60
    RCURLY=61
    UNIT=62
    INTERFACE=63
    USES=64
    STRING=65
    IMPLEMENTATION=66
    TRUE=67
    FALSE=68
    WS=69
    COMMENT_1=70
    COMMENT_2=71
    IDENT=72
    STRING_LITERAL=73
    NUM_INT=74
    NUM_REAL=75

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programHeading(self):
            return self.getTypedRuleContext(PascalParser.ProgramHeadingContext,0)


        def block(self):
            return self.getTypedRuleContext(PascalParser.BlockContext,0)


        def DOT(self):
            return self.getToken(PascalParser.DOT, 0)

        def EOF(self):
            return self.getToken(PascalParser.EOF, 0)

        def INTERFACE(self):
            return self.getToken(PascalParser.INTERFACE, 0)

        def getRuleIndex(self):
            return PascalParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = PascalParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.programHeading()
            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==63:
                self.state = 177
                self.match(PascalParser.INTERFACE)


            self.state = 180
            self.block()
            self.state = 181
            self.match(PascalParser.DOT)
            self.state = 182
            self.match(PascalParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramHeadingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(PascalParser.PROGRAM, 0)

        def identifier(self):
            return self.getTypedRuleContext(PascalParser.IdentifierContext,0)


        def SEMI(self):
            return self.getToken(PascalParser.SEMI, 0)

        def LPAREN(self):
            return self.getToken(PascalParser.LPAREN, 0)

        def identifierList(self):
            return self.getTypedRuleContext(PascalParser.IdentifierListContext,0)


        def RPAREN(self):
            return self.getToken(PascalParser.RPAREN, 0)

        def UNIT(self):
            return self.getToken(PascalParser.UNIT, 0)

        def getRuleIndex(self):
            return PascalParser.RULE_programHeading

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgramHeading" ):
                listener.enterProgramHeading(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgramHeading" ):
                listener.exitProgramHeading(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgramHeading" ):
                return visitor.visitProgramHeading(self)
            else:
                return visitor.visitChildren(self)




    def programHeading(self):

        localctx = PascalParser.ProgramHeadingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programHeading)
        self._la = 0 # Token type
        try:
            self.state = 198
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26]:
                self.enterOuterAlt(localctx, 1)
                self.state = 184
                self.match(PascalParser.PROGRAM)
                self.state = 185
                self.identifier()
                self.state = 190
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==50:
                    self.state = 186
                    self.match(PascalParser.LPAREN)
                    self.state = 187
                    self.identifierList()
                    self.state = 188
                    self.match(PascalParser.RPAREN)


                self.state = 192
                self.match(PascalParser.SEMI)
                pass
            elif token in [62]:
                self.enterOuterAlt(localctx, 2)
                self.state = 194
                self.match(PascalParser.UNIT)
                self.state = 195
                self.identifier()
                self.state = 196
                self.match(PascalParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(PascalParser.IDENT, 0)

        def getRuleIndex(self):
            return PascalParser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):

        localctx = PascalParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_identifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 200
            self.match(PascalParser.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def compoundStatement(self):
            return self.getTypedRuleContext(PascalParser.CompoundStatementContext,0)


        def labelDeclarationPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalParser.LabelDeclarationPartContext)
            else:
                return self.getTypedRuleContext(PascalParser.LabelDeclarationPartContext,i)


        def constantDefinitionPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalParser.ConstantDefinitionPartContext)
            else:
                return self.getTypedRuleContext(PascalParser.ConstantDefinitionPartContext,i)


        def typeDefinitionPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalParser.TypeDefinitionPartContext)
            else:
                return self.getTypedRuleContext(PascalParser.TypeDefinitionPartContext,i)


        def variableDeclarationPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalParser.VariableDeclarationPartContext)
            else:
                return self.getTypedRuleContext(PascalParser.VariableDeclarationPartContext,i)


        def procedureAndFunctionDeclarationPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalParser.ProcedureAndFunctionDeclarationPartContext)
            else:
                return self.getTypedRuleContext(PascalParser.ProcedureAndFunctionDeclarationPartContext,i)


        def usesUnitsPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalParser.UsesUnitsPartContext)
            else:
                return self.getTypedRuleContext(PascalParser.UsesUnitsPartContext,i)


        def IMPLEMENTATION(self, i:int=None):
            if i is None:
                return self.getTokens(PascalParser.IMPLEMENTATION)
            else:
                return self.getToken(PascalParser.IMPLEMENTATION, i)

        def getRuleIndex(self):
            return PascalParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = PascalParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 211
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 7)) & ~0x3f) == 0 and ((1 << (_la - 7)) & 720575940547318017) != 0):
                self.state = 209
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [19]:
                    self.state = 202
                    self.labelDeclarationPart()
                    pass
                elif token in [7]:
                    self.state = 203
                    self.constantDefinitionPart()
                    pass
                elif token in [32]:
                    self.state = 204
                    self.typeDefinitionPart()
                    pass
                elif token in [34]:
                    self.state = 205
                    self.variableDeclarationPart()
                    pass
                elif token in [15, 25]:
                    self.state = 206
                    self.procedureAndFunctionDeclarationPart()
                    pass
                elif token in [64]:
                    self.state = 207
                    self.usesUnitsPart()
                    pass
                elif token in [66]:
                    self.state = 208
                    self.match(PascalParser.IMPLEMENTATION)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 213
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 214
            self.compoundStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UsesUnitsPartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USES(self):
            return self.getToken(PascalParser.USES, 0)

        def identifierList(self):
            return self.getTypedRuleContext(PascalParser.IdentifierListContext,0)


        def SEMI(self):
            return self.getToken(PascalParser.SEMI, 0)

        def getRuleIndex(self):
            return PascalParser.RULE_usesUnitsPart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUsesUnitsPart" ):
                listener.enterUsesUnitsPart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUsesUnitsPart" ):
                listener.exitUsesUnitsPart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUsesUnitsPart" ):
                return visitor.visitUsesUnitsPart(self)
            else:
                return visitor.visitChildren(self)




    def usesUnitsPart(self):

        localctx = PascalParser.UsesUnitsPartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_usesUnitsPart)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 216
            self.match(PascalParser.USES)
            self.state = 217
            self.identifierList()
            self.state = 218
            self.match(PascalParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelDeclarationPartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LABEL(self):
            return self.getToken(PascalParser.LABEL, 0)

        def label(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalParser.LabelContext)
            else:
                return self.getTypedRuleContext(PascalParser.LabelContext,i)


        def SEMI(self):
            return self.getToken(PascalParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PascalParser.COMMA)
            else:
                return self.getToken(PascalParser.COMMA, i)

        def getRuleIndex(self):
            return PascalParser.RULE_labelDeclarationPart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabelDeclarationPart" ):
                listener.enterLabelDeclarationPart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabelDeclarationPart" ):
                listener.exitLabelDeclarationPart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelDeclarationPart" ):
                return visitor.visitLabelDeclarationPart(self)
            else:
                return visitor.visitChildren(self)




    def labelDeclarationPart(self):

        localctx = PascalParser.LabelDeclarationPartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_labelDeclarationPart)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 220
            self.match(PascalParser.LABEL)
            self.state = 221
            self.label()
            self.state = 226
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==41:
                self.state = 222
                self.match(PascalParser.COMMA)
                self.state = 223
                self.label()
                self.state = 228
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 229
            self.match(PascalParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unsignedInteger(self):
            return self.getTypedRuleContext(PascalParser.UnsignedIntegerContext,0)


        def getRuleIndex(self):
            return PascalParser.RULE_label

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabel" ):
                listener.enterLabel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabel" ):
                listener.exitLabel(self)
